--- a/markup/add-new-point.html
+++ b/markup/add-new-point.html
@@ -7,7 +7,7 @@
     <title>Big Trip</title>
 
     <link rel="stylesheet" href="css/style.css">
-  </head>{}
+  </head>
 
   <body class="page-body">
     <header class="page-header">
