--- a/markup/add-new-point-without-destination.html
+++ b/markup/add-new-point-without-destination.html
@@ -21,7 +21,7 @@
 
               <p class="trip-info__dates">18&nbsp;&mdash;&nbsp;20 Mar</p>
             </div>
-
+<!-- мяу -->
             <p class="trip-info__cost">
               Total: &euro;&nbsp;<span class="trip-info__cost-value">1230</span>
             </p>
