--- a/markup/edit-point.html
+++ b/markup/edit-point.html
@@ -8,7 +8,7 @@
 
     <link rel="stylesheet" href="css/style.css">
   </head>
-
+<!-- помогите -->
   <body class="page-body">
     <header class="page-header">
       <div class="page-body__container  page-header__container">
